Issue #0300: added PerfectScrollBar to fileListExplorer

--- a/DSLAMAll/DSLAMFront/src/main/webapp/css/DSLAMDesktopModule.css
+++ b/DSLAMAll/DSLAMFront/src/main/webapp/css/DSLAMDesktopModule.css
@@ -59,8 +59,6 @@
 
 .dslam_studio-filelist {
 	height: 100%;
-	overflow-y: auto;
-	overflow-x: visible;
 }
 
 .dslam_studio-filelist-header {
@@ -69,6 +67,9 @@
 	padding: 5px;
 	font-weight: bold;
 	border: 1px solid #CCCCCC;
+}
+
+.dslam_studio-filelist-container-zone {
 }
 
 .dslam_studio-filelist-element {
@@ -87,6 +88,7 @@
 .dslam_studio-filelist-element .dropdown-toggle {
 	width: 25%;
 	border-right-width: 0px;
+	z-index: 0;
 }
 
 .dslam_studio-filelist-element .dropdown-menu {
